<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBooksActivity">

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="186dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/addTitle"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/addTitle_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addTitle_label"
        android:layout_width="109dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/addTitle_label"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addTitleButton"
        android:layout_width="56dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/addTitleButton"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/addTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addISBN_label"
        android:layout_width="110dp"
        android:layout_height="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/addISBN_label"
        android:textSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitle_label" />

    <EditText
        android:id="@+id/addISBN"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/addISBN"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/addISBN_label"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addISBNButton"
        android:layout_width="56dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addISBNButton"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/addISBN"
        app:layout_constraintTop_toBottomOf="@+id/addTitleButton" />

    <Button
        android:id="@+id/addManualButton"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addManualButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/possibleBooks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/possibleBooks"
        android:layout_width="414dp"
        android:layout_height="384dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addISBN_label" />

    <Button
        android:id="@+id/cancelAddManualButton"
        android:layout_width="98dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancelAddManualButton"
        app:layout_constraintStart_toEndOf="@+id/addManualButton"
        app:layout_constraintTop_toBottomOf="@+id/possibleBooks" />

</androidx.constraintlayout.widget.ConstraintLayout>