<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keyword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewBooksActivity">


    <TextView
        android:id="@+id/find"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/findLabel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/find_input"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:hint="@string/find_input"
        android:inputType="text|textPhonetic"
        app:layout_constraintStart_toEndOf="@+id/find"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/titlebutton"
        android:layout_width="116dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="92dp"
        android:text="@string/titlebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/keywordbutton"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="92dp"
        android:text="@string/keywordbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/authorbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/authorbutton"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="92dp"
        android:text="@string/authorbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/titlebutton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/book_info"
        android:layout_width="356dp"
        android:layout_height="481dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewFinishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="160dp"
        android:text="@string/viewFinishButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>